chore: update babel config and change compile output

--- a/babel.config.json
+++ b/babel.config.json
@@ -1,8 +1,10 @@
 {
   "presets": [
-    "@babel/preset-typescript"
-  ],
-  "plugins": [
-    "@babel/plugin-transform-typescript"
+    "@babel/preset-typescript",
+    ["@babel/preset-env", {
+      "targets": {
+        "node": 20
+      }
+    }]
   ]
 }
