--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "devDependencies": {
     "@babel/cli": "^7.24.6",
     "@babel/core": "^7.24.6",
-    "@babel/plugin-transform-typescript": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
     "@babel/preset-typescript": "^7.24.6",
     "eslint": "^9.3.0",
     "typescript": "^5.4.5"
